Bug 505346 - Cannot save build targets in: /.kateproject.build
Summary: Cannot save build targets in: /.kateproject.build
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-08 13:43 UTC by Vinícius
Modified: 2025-06-10 01:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.04.3
Sentry Crash Report:


Attachments
Video reproduzing the issue in a newly created git repo (232.15 KB, video/mp4)
2025-06-09 22:09 UTC, Vinícius
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vinícius 2025-06-08 13:43:02 UTC
SUMMARY
Can't create a build target with the build plugin, it give me the error "Cannot save build targets in: /.kateproject.build"

STEPS TO REPRODUCE
1. Create an git repo with an empty file
2. open that file with Kate
3. try to create a new build target under "Projects", and the error shows up

OBSERVED RESULT
no .kateproject.build under the project directory is created, and the build targets get deleted after a reload

EXPECTED RESULT
a .kateproject.build is created and it saves the project build targets

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 42
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Kernel Version: 6.14.8-cachyos1.lto.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5700U with Radeon Graphics
Memory: 7.1 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: LENOVO
Product Name: 82MF
System Version: IdeaPad 3 15ALC6

ADDITIONAL INFORMATION
Creating a build target under session work, but it share build targets with others projects
Comment 1 Vinícius 2025-06-09 22:09:23 UTC
Created attachment 182130 [details]
Video reproduzing the issue in a newly created git repo
Comment 2 Bug Janitor Service 2025-06-10 00:36:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1790
Comment 3 Kåre Särs 2025-06-10 00:41:28 UTC
Git commit a66839c5b4adf51001cd9008667912d225a52155 by Kåre Särs.
Committed on 10/06/2025 at 00:35.
Pushed by sars into branch 'master'.

Build: Fix creating a new set of targets

M  +6    -1    addons/katebuild-plugin/targets.cpp

https://invent.kde.org/utilities/kate/-/commit/a66839c5b4adf51001cd9008667912d225a52155
Comment 4 Kåre Särs 2025-06-10 00:43:28 UTC
Git commit 139e4410d2e6e8da15339bbdcf4799e3f9641c19 by Kåre Särs.
Committed on 10/06/2025 at 00:42.
Pushed by sars into branch 'release/25.04'.

Build: Fix creating a new set of targets

M  +6    -1    addons/katebuild-plugin/targets.cpp

https://invent.kde.org/utilities/kate/-/commit/139e4410d2e6e8da15339bbdcf4799e3f9641c19