Build: Fix creating a new set of targets

BUG: 505346